[6] Auth Add:   - Session also connected to MongoDB   - Log in and Sign up logic and view   - Routes and Views Auth protection   - CSRF token protection   - Password one-way encryption   - Middlewares: auth, user, variables   - Libraries: bcryptjs, express-session, connect-mongodb-session, csurf, connect-flash(for validation)   - Validation messages on submit
Removed:
  - Temporary stubbed user

--- a/views/add.hbs
+++ b/views/add.hbs
@@ -16,5 +16,8 @@
     <label for="img">Image URL</label>
     <span class="helper-text" data-error="Add image URL"></span>
   </div>
+  {{!-- Middleware will look at _csrf name and throw csrf value from middleware/variables => req.locals --}}
+  <input type="hidden" name="_csrf" value="{{csrf}}">
+
   <button class="btn btn-primary">Add Course</button>
 </form>
