--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -15,7 +15,13 @@
         <td>{{title}}</td>
         <td>{{count}}</td>
         <td>
-          <button class="btn btn-small js-remove" data-id="{{id}}">Delete</button>
+          <button
+            class="btn btn-small js-remove"
+            data-id="{{id}}"
+            data-csrf="{{@root.csrf}}"
+          >
+            Delete
+          </button>
         </td>
       </tr>
       {{/each}}
@@ -30,6 +36,7 @@
   </p>
 
   <form action="/orders" method="POST">
+    <input type="hidden" name="_csrf" value="{{csrf}}">
     <button type="submit" class="btn">Make an Order</button>
   </form>
 
