--- a/views/course-edit.hbs
+++ b/views/course-edit.hbs
@@ -17,10 +17,14 @@
     <span class="helper-text" data-error="Add image URL"></span>
   </div>
   <input type="hidden" name="id" value="{{course.id}}">
+  <input type="hidden" name="_csrf" value="{{csrf}}">
+
   <button type="submit" class="btn btn-primary">Edit</button>
 </form>
 
 <form action="/courses/remove" method="POST">
   <input type="hidden" name="id" value="{{course.id}}">
+  <input type="hidden" name="_csrf" value="{{csrf}}">
+
   <button class="btn red">Delete</button>
 </form>
